--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "DATA_DIR": "/Users/martin.lund.haug/Documents/Masteroppgave/datasets/cifar10/",
-    "PLOT_DIR": "/home/martlh/masteroppgave/core-set/plots/",
+    "DATA_DIR" : "/Users/martin.lund.haug/Documents/Masteroppgave/datasets/cifar10",
+    "PLOT_DIR" : "/Users/martin.lund.haug/Documents/Masteroppgave/core-set/plots",
     "NET": "resnet34",
     "DATA_SET": "CIFAR10",
     "NUM_INIT_LABELED": 0,
