--- a/config.json
+++ b/config.json
@@ -1,11 +1,1 @@
-{
-    "DATA_DIR" : "/Users/martin.lund.haug/Documents/Masteroppgave/datasets/cifar10",
-    "PLOT_DIR" : "/Users/martin.lund.haug/Documents/Masteroppgave/core-set/plots",
-    "NET": "resnet34",
-    "DATA_SET": "CIFAR10",
-    "NUM_INIT_LABELED": 0,
-    "NUM_QUERY": 1000,
-    "BUDGET": 10000,
-    "NUM_WORKERS": 4,
-    "FRACTION": 1
-}
+{"DATA_DIR": "/Users/martin.lund.haug/Documents/Masteroppgave/datasets/cifar10", "PLOT_DIR": "/Users/martin.lund.haug/Documents/Masteroppgave/core-set/plots", "NET": "resnet18", "DATA_SET": "CIFAR10", "NUM_INIT_LABELED": 0, "NUM_QUERY": 1000, "BUDGET": 50000, "NUM_WORKERS": 4, "FRACTION": 1}
