--- a/config.json
+++ b/config.json
@@ -1,12 +1,1 @@
-{
-    "DATA_DIR": "../datasets/cifar10",
-    "PLOT_DIR": "./plots",
-    "NET": "resnet18",
-    "STRATEGY": "coreset",
-    "DATA_SET": "CIFAR10",
-    "NUM_INIT_LABELED": 100,
-    "NUM_QUERY": 10000,
-    "BUDGET": 50000,
-    "NUM_WORKERS": 0,
-    "FRACTION": 1
-}
+{"DATA_DIR": "../datasets/cifar10", "PLOT_DIR": "./plots", "NET": "resnet18", "STRATEGY": "DFAL", "DATA_SET": "CIFAR10", "NUM_INIT_LABELED": 0, "NUM_QUERY": 10, "BUDGET": 100, "NUM_WORKERS": 0, "FRACTION": 0.01}
