--- a/config.json
+++ b/config.json
@@ -4,9 +4,10 @@
     "NET": "resnet18",
     "STRATEGY": "BUDAL",
     "DATA_SET": "CIFAR10",
-    "NUM_INIT_LABELED": 500,
-    "NUM_QUERY": 500,
-    "BUDGET": 4000,
+    "NUM_INIT_LABELED": 100,
+    "NUM_QUERY": 1000,
+    "BUDGET": 20000,
     "NUM_WORKERS": 4,
-    "FRACTION": 0.1
+    "FRACTION": 1,
+    "CUDA_N": 0
 }
